# vbwd-plugin-mercado-pago

./: .gitignore  README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
mercado_pago/: models.py  routes.py  sdk_adapter.py  services.py
migrations/versions/: 20260422_1400_mercado_pago_payments.py
tests/: conftest.py
tests/unit/: test_plugin.py  test_sdk_adapter.py  test_services.py
